// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Accordion Component Should open Accordion when button is clicked 1`] = `
.c3 {
  vertical-align: middle;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  color: hsl(200,96%,11%);
  margin-left: 16px;
  margin-right: 16px;
  font-size: 16px;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2:focus {
  background-color: hsla(200,96%,35%,0.25);
}

.c2:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-weight: 600;
  font-size: 25.92px;
  line-height: 40px;
}

.c1.borderBottom {
  border-bottom: 2px solid hsl(200,18%,45%);
}

.c4 {
  overflow: hidden;
  -webkit-transition: all 600ms ease-in;
  transition: all 600ms ease-in;
  border-bottom: 2px solid hsl(200,18%,45%);
}

.c0 {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      aria-label="Accordion"
      class="c1 "
      tabindex="0"
    >
      <header>
        Test Header
      </header>
      <button
        aria-label="Close"
        class="c2"
        type="button"
        variant="standard"
      >
        <svg
          class="c3"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </button>
    </div>
    <div
      class="c4"
      style="height: 0px;"
    >
      <div>
        Test Body
      </div>
    </div>
  </div>
</div>
`;

exports[`component: Accordion Component Should render Accordion 1`] = `
.c3 {
  vertical-align: middle;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  color: hsl(200,96%,11%);
  margin-left: 16px;
  margin-right: 16px;
  font-size: 16px;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2:focus {
  background-color: hsla(200,96%,35%,0.25);
}

.c2:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-weight: 600;
  font-size: 25.92px;
  line-height: 40px;
}

.c1.borderBottom {
  border-bottom: 2px solid hsl(200,18%,45%);
}

.c0 {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      aria-label="Accordion"
      class="c1 borderBottom"
      tabindex="0"
    >
      <header>
        Test Header
      </header>
      <button
        aria-label="Expand"
        class="c2"
        type="button"
        variant="standard"
      >
        <svg
          class="c3"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`component: Accordion Provider Should manage Accordion state 1`] = `
.c3 {
  vertical-align: middle;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  color: hsl(200,96%,11%);
  margin-left: 16px;
  margin-right: 16px;
  font-size: 16px;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2:focus {
  background-color: hsla(200,96%,35%,0.25);
}

.c2:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-weight: 600;
  font-size: 25.92px;
  line-height: 40px;
}

.c1.borderBottom {
  border-bottom: 2px solid hsl(200,18%,45%);
}

.c4 {
  overflow: hidden;
  -webkit-transition: all 600ms ease-in;
  transition: all 600ms ease-in;
  border-bottom: 2px solid hsl(200,18%,45%);
}

.c0 {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      aria-label="Accordion"
      class="c1 "
      tabindex="0"
    >
      <header>
        Test Header
      </header>
      <button
        aria-label="Close"
        class="c2"
        type="button"
        variant="standard"
      >
        <svg
          class="c3"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </button>
    </div>
    <div
      class="c4"
      style="height: 0px;"
    >
      <div>
        Test Body
      </div>
    </div>
  </div>
</div>
`;
